--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="color_454344">#454344</color>
     <color name="c36627">#c36627</color>
     <color name="ee7559">#ee7559</color>
+    <color name="gray">#D3D3D3</color>
 </resources>
