--- a/app/src/main/res/layout/item_unitcensorship.xml
+++ b/app/src/main/res/layout/item_unitcensorship.xml
@@ -2,61 +2,66 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:background="#FFFFFF">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_examiner"
-        android:text="检查人："
-        android:textSize="14sp"
-        android:textColor="#333333"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_examiner_content"
-        android:text="张三，李四，王五张三，李四，王五张三，李四，王五"
-        android:textSize="14sp"
-        android:textColor="#333333"
-        android:lines="1"
-        android:ellipsize="end"
-        android:layout_toRightOf="@+id/tv_examiner"
-        android:layout_marginLeft="8dp"
-        android:layout_toLeftOf="@+id/iv_pass"
-        android:layout_marginRight="8dp"/>
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@mipmap/pass"
-        android:id="@+id/iv_pass"
-        android:layout_toLeftOf="@+id/iv_next"
-        android:layout_marginRight="8dp"/>
-    <ImageView
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@mipmap/next"
-        android:layout_alignParentRight="true"
-        android:id="@+id/iv_next"
-        android:layout_centerVertical="true"/>
+    android:background="#FFFFFF"
+    android:padding="16dp">
 
     <TextView
+        android:id="@+id/tv_examiner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="检查人："
+        android:textColor="#333333"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/tv_examiner_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_toLeftOf="@+id/iv_pass"
+        android:layout_toRightOf="@+id/tv_examiner"
+        android:ellipsize="end"
+        android:lines="1"
+        android:text="张三，李四，王五张三，李四，王五张三，李四，王五"
+        android:textColor="#333333"
+        android:textSize="14sp" />
+
+    <ImageView
+        android:id="@+id/iv_pass"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="8dp"
+        android:layout_toLeftOf="@+id/iv_next"
+        android:src="@drawable/ic_pass" />
+
+    <ImageView
+        android:id="@+id/iv_next"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@mipmap/next" />
+
+    <TextView
         android:id="@+id/tv_checkTime"
-        android:text="检查时间："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/tv_examiner"
         android:layout_marginTop="8dp"
-        android:textSize="12sp"
-        android:textColor="#666666"/>
+        android:text="检查时间："
+        android:textColor="@android:color/darker_gray"
+        android:textSize="12sp" />
+
     <TextView
+        android:id="@+id/tv_checkTime_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_checkTime_content"
-        android:textColor="#666666"
-        android:text="2016-11-11"
         android:layout_below="@+id/tv_examiner"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_toRightOf="@+id/tv_checkTime"
-        android:layout_marginLeft="8dp"/>
+        android:text="2016-11-11"
+        android:textColor="@android:color/darker_gray" />
 
 </RelativeLayout>
