--- a/app/src/main/res/layout/activity_censorship_detail.xml
+++ b/app/src/main/res/layout/activity_censorship_detail.xml
@@ -1181,9 +1181,9 @@
         <LinearLayout
             android:id="@+id/ll_ldyj"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            tools:visibility="gone"
-            android:layout_height="wrap_content">
+            tools:visibility="gone">
 
             <RelativeLayout
                 android:id="@+id/relativeLayout13"
