--- a/app/src/main/res/layout/layout_result_dispatch_filter.xml
+++ b/app/src/main/res/layout/layout_result_dispatch_filter.xml
@@ -15,7 +15,7 @@
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:singleLine="true"
-        android:text="单位名称/组织机构代码"
+        android:text="单位名称/统一社会信用代码"
         android:textColor="@color/colorPrimary"
         android:textSize="14sp" />
 
@@ -26,7 +26,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:background="#F5F5F5"
-        android:hint="请输入单位名称或组织机构代码"
+        android:hint="请输入单位名称或统一社会信用代码"
         android:imeOptions="actionDone"
         android:maxLines="1"
         android:paddingLeft="8dp"
