--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -32,7 +32,7 @@
             android:background="@drawable/et_search_bg"
             android:ellipsize="end"
             android:gravity="center_vertical"
-            android:hint="请输入单位名称或组织机构代码"
+            android:hint="请输入单位名称或统一社会信用代码"
             android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLines="1"
