--- a/app/src/main/res/layout/item_unit_and_detail.xml
+++ b/app/src/main/res/layout/item_unit_and_detail.xml
@@ -1,54 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="8dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/tv_unit_name"
-        tools:text="公司名字"
-        android:textSize="18sp"
-        android:ellipsize="end"
-        android:layout_marginBottom="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="4dp"
         android:layout_toLeftOf="@+id/tv_details"
-        android:layout_alignParentLeft="true"/>
+        android:ellipsize="end"
+        android:textSize="18sp"
+        tools:text="公司名字" />
+
     <TextView
         android:id="@+id/tv_details"
-        android:clickable="true"
-        android:padding="4dp"
-        android:textColor="@color/colorPrimary"
-        android:text="详情"
-        android:singleLine="true"
-        android:ellipsize="end"
-        android:layout_marginBottom="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"/>
-
-    <TextView
-        android:id="@+id/tv_code"
-        tools:text="报件编号：FHG20295101"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_unit_name" />
-
-    <TextView
-        android:id="@+id/tv_date"
-        tools:text="时间：2016年12月20日"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/tv_unit_name" />
+        android:layout_marginBottom="4dp"
+        android:clickable="true"
+        android:ellipsize="end"
+        android:padding="4dp"
+        android:visibility="gone"
+        android:singleLine="true"
+        android:text="详情"
+        android:textColor="@color/colorPrimary" />
+
     <TextView
-        android:layout_marginTop="4dp"
-        android:layout_below="@+id/tv_date"
-        android:text="分发内容"
-        android:paddingTop="4dp"
-        android:drawableRight="@mipmap/arrow_bottom"
+        android:id="@+id/tv_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_unit_name"
+        tools:text="报件编号：FHG20295101" />
+
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/tv_unit_name"
+        tools:text="时间：2016年12月20日" />
+
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_date"
+        android:layout_marginTop="4dp"
+        android:drawableRight="@mipmap/arrow_bottom"
+        android:paddingTop="4dp"
+        android:text="分发内容" />
 </RelativeLayout>
