--- a/app/src/main/res/layout/dialog_admin_region.xml
+++ b/app/src/main/res/layout/dialog_admin_region.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@drawable/sp_rr_2395fc"
-        android:text="查询"
+        android:text="确定"
         android:textColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/recycler_view" />
 
