拥有的涉密测绘成果 Adapter 修改

--- a/app/src/main/res/layout/item_unit_and_detail.xml
+++ b/app/src/main/res/layout/item_unit_and_detail.xml
@@ -47,6 +47,7 @@
         tools:text="时间：2016年12月20日" />
 
     <TextView
+        android:id="@+id/tv_dispatchContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_date"
