--- a/app/src/main/res/layout/activity_own_secret_result.xml
+++ b/app/src/main/res/layout/activity_own_secret_result.xml
@@ -9,9 +9,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
