--- a/app/src/main/res/layout/layout_result_dispatch_filter.xml
+++ b/app/src/main/res/layout/layout_result_dispatch_filter.xml
@@ -60,6 +60,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:background="#F5F5F5"
+        android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:hint="请输入报件编号"
         android:imeOptions="actionDone"
         android:maxLines="1"
@@ -87,6 +88,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:background="#F5F5F5"
+        android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:hint="请输入图幅号或数据编号"
         android:imeOptions="actionDone"
         android:maxLines="1"
