--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,12 +15,20 @@
         tools:context="android.zhixun.uiho.com.gissystem.ui.activity.MainActivity"
         tools:visibility="visible">
 
-        <FrameLayout
-            android:id="@+id/contentContainer"
+        <!--<FrameLayout-->
+        <!--android:id="@+id/contentContainer"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_above="@+id/rg_bottom_radio_navigation"-->
+        <!--android:background="@color/colorWhite" />-->
+
+        <android.zhixun.uiho.com.gissystem.ui.widget.NoScrollViewPager
+            android:id="@+id/vp_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/rg_bottom_radio_navigation"
-            android:background="@color/colorWhite" />
+            android:layout_above="@+id/rg_bottom_radio_navigation">
+
+        </android.zhixun.uiho.com.gissystem.ui.widget.NoScrollViewPager>
 
         <RadioGroup
             android:id="@+id/rg_bottom_radio_navigation"
