opt:结构 改为 机构

--- a/app/src/main/res/layout/activity_censorship_register_one.xml
+++ b/app/src/main/res/layout/activity_censorship_register_one.xml
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="(二) 是否需要进一步健全保密结构"
+            android:text="(二) 是否需要进一步健全保密机构"
             android:textColor="#666666"
             android:textSize="12sp" />
 
