--- a/app/src/main/res/layout/activity_censorship_register_three.xml
+++ b/app/src/main/res/layout/activity_censorship_register_three.xml
@@ -80,6 +80,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/btn_signature"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="签字"
